--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,13 @@
 		"ext-gd" : "*",
 		"ext-mbstring" : "*",
 		"ext-zip" : "*",
-		"yiisoft/yii2": "^2.0.5",
-		"yiisoft/yii2-bootstrap": "*",
-		"tinymce/tinymce" : "^4.3"
+		"yiisoft/yii2" : "^2.0.5",
+		"yiisoft/yii2-bootstrap" : "*",
+		"bower-asset/tinymce-dist" : "^4.3",
+		"bower-asset/fontawesome" : "^4.0",
+		"bower-asset/jquery" : "2.2.*@stable | 2.1.*@stable | 1.11.*@stable",
+		"bower-asset/jqueryui" : "1.10.*@stable",
+		"bower-asset/jquery-dateFormat" : "^1.0"
 	},
 	"autoload" : {
 		"psr-4" : {
