--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,9 @@
 		"ext-mbstring" : "*",
 		"ext-zip" : "*",
 		"yiisoft/yii2" : "^2.0.5",
-		"yiisoft/yii2-bootstrap" : "*",
+		"yiisoft/yii2-jui" : "*",
 		"bower-asset/tinymce-dist" : "^4.3",
 		"bower-asset/fontawesome" : "^4.0",
-		"bower-asset/jquery" : "2.2.*@stable | 2.1.*@stable | 1.11.*@stable",
-		"bower-asset/jqueryui" : "1.10.*@stable",
 		"bower-asset/jquery-dateFormat" : "^1.0"
 	},
 	"autoload" : {
