--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
 		"yiisoft/yii2" : "^2.0.5",
 		"yiisoft/yii2-jui" : "*",
 		"bower-asset/tinymce-dist" : "^4.3",
+		"bower-asset/jquery-ui-bootstrap" : "*",
 		"bower-asset/fontawesome" : "^4.0",
 		"bower-asset/jquery-dateFormat" : "^1.0"
 	},
