--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
 		"file manager"
 	],
 	"type" : "yii2-extension",
-	"license" : "BSD-3-Clause",
-	"minimum-stability" : "dev",
+	"license" : "MIT",
+	"minimum-stability" : "stable",
 	"support" : {
 		"source" : "https://github.com/navatech/yii2-roxymce"
 	},
@@ -24,9 +24,9 @@
 		"ext-mbstring" : "*",
 		"ext-zip" : "*",
 		"yiisoft/yii2" : "^2.0.5",
+		"yiisoft/yii2-bootstrap" : "*",
 		"yiisoft/yii2-jui" : "*",
 		"bower-asset/tinymce-dist" : "^4.3",
-		"bower-asset/jquery-ui-bootstrap" : "*",
 		"bower-asset/fontawesome" : "^4.0",
 		"bower-asset/jquery-dateFormat" : "^1.0"
 	},
