--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,11 @@
 	"description" : "Integrate tinymce + roxy manager to yii2",
 	"keywords" : [
 		"yii2",
+		"navatech",
 		"tinymce",
-		"file manager"
+		"file manager",
+		"roxy",
+		"fileman"
 	],
 	"type" : "yii2-extension",
 	"license" : "MIT",
@@ -25,7 +28,6 @@
 		"ext-zip" : "*",
 		"yiisoft/yii2" : "^2.0.5",
 		"yiisoft/yii2-bootstrap" : "*",
-		"yiisoft/yii2-jui" : "*",
 		"bower-asset/tinymce-dist" : "^4.3",
 		"bower-asset/fontawesome" : "^4.0",
 		"bower-asset/jquery-dateFormat" : "^1.0"
