--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,14 @@
 	"license" : "MIT",
 	"minimum-stability" : "stable",
 	"support" : {
-		"source" : "https://github.com/navatech/yii2-roxymce"
+		"source" : "https://github.com/navatech/yii2-roxymce",
+		"original" : "http://www.roxyfileman.com/"
 	},
 	"authors" : [
+		{
+			"name" : "Lyubomir Arsov",
+			"homepage" : "http://www.roxyfileman.com"
+		},
 		{
 			"name" : "Le Phuong",
 			"email" : "phuong17889@gmail.com"
@@ -26,8 +31,7 @@
 		"ext-gd" : "*",
 		"ext-mbstring" : "*",
 		"ext-zip" : "*",
-		"yiisoft/yii2" : "^2.0.5",
-		"yiisoft/yii2-bootstrap" : "*",
+		"navatech/yii2-navatech-base" : "@dev",
 		"bower-asset/tinymce-dist" : "^4.3",
 		"bower-asset/fontawesome" : "^4.0",
 		"bower-asset/jquery-dateFormat" : "^1.0"
