--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,15 @@
 		"navatech/yii2-navatech-base" : "@dev",
 		"bower-asset/tinymce-dist" : "^4.3",
 		"bower-asset/fontawesome" : "^4.0",
-		"bower-asset/jquery-dateFormat" : "^1.0"
+		"bower-asset/jquery-dateFormat" : "^1.0",
+		"bower-asset/bootstrap-select" : "^1.10"
 	},
 	"autoload" : {
 		"psr-4" : {
 			"navatech\\roxymce\\" : "src"
 		}
+	},
+	"extra" : {
+		"bootstrap" : "navatech\\roxymce\\Bootstrap"
 	}
 }
