--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,9 @@
 		"navatech/yii2-navatech-base" : "@dev",
 		"bower-asset/tinymce-dist" : "^4.3",
 		"bower-asset/fontawesome" : "^4.0",
-		"bower-asset/jquery-dateFormat" : "^1.0"
+		"bower-asset/jquery-dateFormat" : "^1.0",
+		"bower-asset/bootstrap-select" : "*",
+		"bower-asset/bootstrap-treeview" : "*"
 	},
 	"autoload" : {
 		"psr-4" : {
