--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,11 @@
 		"ext-mbstring" : "*",
 		"ext-zip" : "*",
 		"navatech/yii2-navatech-base" : "@dev",
-		"rmrevin/yii2-fontawesome" : "~2.15",
 		"bower-asset/tinymce-dist" : "^4.3",
 		"bower-asset/jquery-dateFormat" : "^1.0",
-		"bower-asset/bootstrap-select" : "*",
-		"bower-asset/bootstrap-treeview" : "*",
-		"execut/yii2-widget-bootstraptreeview" : "dev-master",
+		"bower-asset/bootstrap-select" : "^1.11",
+		"bower-asset/fontawesome" : "^4.6",
+		"execut/yii2-widget-bootstraptreeview" : "@dev",
 		"2amigos/yii2-file-upload-widget" : "~1.0"
 	},
 	"conflict" : {
