--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
 		"bower-asset/fontawesome" : "^4.6",
 		"bower-asset/patternfly-bootstrap-treeview" : "~2.1",
 		"bower-asset/jquery.lazyload" : "~1.9",
+		"bower-asset/lightbox2" : "~2.8",
 		"2amigos/yii2-file-upload-widget" : "~1.0"
 	},
 	"conflict" : {
