--- a/composer.json
+++ b/composer.json
@@ -32,12 +32,10 @@
 		"ext-zip" : "*",
 		"navatech/yii2-navatech-base" : "@dev",
 		"bower-asset/tinymce-dist" : "^4.3",
-		"bower-asset/bootstrap-select" : "^1.11",
 		"bower-asset/fontawesome" : "^4.6",
 		"bower-asset/patternfly-bootstrap-treeview" : "~2.1",
 		"bower-asset/jquery.lazyload" : "~1.9",
-		"bower-asset/lightbox2" : "~2.8",
-		"2amigos/yii2-file-upload-widget" : "~1.0"
+		"bower-asset/fancybox" : "~2.1"
 	},
 	"conflict" : {
 		"skeeks/yii2-assets-auto-compress" : "1.2.*"
