fix contextmenu on linux system

--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
 		"bower-asset/fontawesome" : "^4.6",
 		"bower-asset/patternfly-bootstrap-treeview" : "~2.1",
 		"bower-asset/jquery.lazyload" : "~1.9",
-		"bower-asset/fancybox" : "~2.1",
-		"bower-asset/jquery-contextmenu" : "~2.3"
+		"bower-asset/fancybox" : "~2.1"
 	},
 	"conflict" : {
 		"skeeks/yii2-assets-auto-compress" : "1.2.*"
@@ -41,13 +40,6 @@
 		}
 	},
 	"extra" : {
-		"bootstrap" : "navatech\\roxymce\\Bootstrap",
-		"asset-repositories" : [
-			{
-				"name": "bower-asset/jquery-contextmenu",
-				"type": "bower-vcs",
-				"url": "https://github.com/swisnl/jQuery-contextMenu.git"
-			}
-		]
+		"bootstrap" : "navatech\\roxymce\\Bootstrap"
 	}
 }
