--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 		"ext-mbstring" : "*",
 		"ext-zip" : "*",
 		"navatech/yii2-navatech-base" : "1.0.0.2",
-		"bower-asset/tinymce-dist" : "^4.3",
+		"bower-asset/tinymce" : "^4.3",
 		"bower-asset/fontawesome" : "^4.6",
 		"bower-asset/patternfly-bootstrap-treeview" : "~2.1",
 		"bower-asset/jquery.lazyload" : "~1.9",
