--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "navatech/yii2-roxymce",
+    "name": "janki/yii2-roxymce",
     "description": "Integrate tinymce + roxy manager to yii2",
     "keywords": [
         "yii2",
