--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,5 +1,5 @@
 name: PHP Composer
-uses: actions/create-release@v1
+
 on:
   push:
     branches: [ master ]
@@ -15,6 +15,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/create-release@v1
 
     - name: Validate composer.json and composer.lock
       run: composer validate
