--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         }
     },
     "extra": {
-        "bootstrap": "janki1\roxymce\\Bootstrap"
+        "bootstrap": "janki1\\roxymce\\Bootstrap"
     },
     "repositories": [
         {
