--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,29 @@
 {
-	"name" : "navatech/yii2-roxymce",
+	"name" : "phuongdev89/yii2-roxymce",
 	"description" : "Integrate tinymce + roxy manager to yii2",
 	"keywords" : [
 		"yii2",
-		"navatech",
+		"phuongdev89",
 		"tinymce",
 		"file manager",
 		"roxy"
 	],
 	"type" : "yii2-extension",
 	"license" : "MIT",
-	"homepage" : "https://navatech.vn",
 	"support" : {
-		"source" : "https://github.com/navatech/yii2-roxymce"
+		"source" : "https://github.com/phuongdev89/yii2-roxymce"
 	},
 	"authors" : [
 		{
-			"name" : "Le Phuong",
-			"email" : "phuong17889@gmail.com"
+			"name" : "Phuong Dev",
+			"email" : "phuongdev89@gmail.com"
 		}
 	],
 	"require" : {
 		"ext-gd" : "*",
 		"ext-mbstring" : "*",
 		"ext-zip" : "*",
-		"navatech/yii2-navatech-base" : "@dev",
+		"phuongdev89/yii2-base" : "@dev",
 		"bower-asset/tinymce" : "^4.3",
 		"bower-asset/fontawesome" : "^4.6",
 		"bower-asset/patternfly-bootstrap-treeview" : "~2.1",
@@ -36,10 +35,10 @@
 	},
 	"autoload" : {
 		"psr-4" : {
-			"navatech\\roxymce\\" : "src"
+			"phuongdev89\\roxymce\\" : "src"
 		}
 	},
 	"extra" : {
-		"bootstrap" : "navatech\\roxymce\\Bootstrap"
+		"bootstrap" : "phuongdev89\\roxymce\\Bootstrap"
 	}
 }
