--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "ext-gd": "*",
         "ext-mbstring": "*",
         "ext-zip": "*",
-        "navatech/yii2-navatech-base": "1.0.0.2",
+        "phuongdev89/yii2-base": "1.0.0",
         "bower-asset/tinymce": "^4.3",
         "bower-asset/fontawesome": "^4.6",
         "bower-asset/patternfly-bootstrap-treeview": "~2.1",
